--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "soccer-rl"]
 	path = soccer-rl
 	url = https://github.com/utra-robosoccer/soccer-rl
+[submodule "soccer_description"]
+	path = soccer_description
+	url = https://github.com/utra-robosoccer/soccer_description
