--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,7 @@ python:
   - "3.6"
 # command to install dependencies
 install:
+  - pip3 install --upgrade pip3
   - python3 -m ensurepip --upgrade
   - pip3 install -r requirements.txt
 # command to run tests
