--- a/.travis.yml
+++ b/.travis.yml
@@ -29,6 +29,7 @@ install:
   - sudo apt-get install python3-pip
   - sudo pip3 install -U pip wheel
   - sudo pip3 install setuptools --upgrade
+  - pip3 install --upgrade pip
   - pip3 install -r requirements.txt
 # command to run tests
   
