--- a/.travis.yml
+++ b/.travis.yml
@@ -23,14 +23,10 @@ env:
     
 language: python
 python:
-  - "3.6"
+  - "3.6.6"
 # command to install dependencies
 install:
-  - sudo apt-get install python3-pip
-  - sudo pip3 install -U pip wheel
-  - sudo pip3 install setuptools --upgrade
-  - pip3 install --upgrade pip
-  - pip3 install -r requirements.txt
+  - pip install -r requirements.txt
 # command to run tests
   
 script: python soccer-rl/tests/test.py
