--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ python:
   - "3.6.6"
 # command to install dependencies
 install:
-  - pip install -r requirements.txt
+  - pip3 install -r requirements.txt
 # command to run tests
   
 script: python soccer-rl/tests/test.py
