--- a/.travis.yml
+++ b/.travis.yml
@@ -23,9 +23,10 @@ env:
     
 language: python
 python:
-  - "3.6.6"
+  - "3.6"
 # command to install dependencies
 install:
+  - pip install -U setuptools
   - pip3 install -r requirements.txt
 # command to run tests
   
