--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ language:
   - generic
 cache:
   - apt
+  - pip
 
 # Configuration variables. All variables are global now, but this can be used to
 # trigger a build matrix for different ROS distributions if desired.
