--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,4 @@ Icon[]
 *_ert_rtw/
 soccer-utility/soccer_msgs/matlab_gen/
 soccer-utility/connectrobot.m
+soccer-rl/__pycache__/agent.cpython-36.pyc soccer-rl/__pycache__/environment.cpython-36.pyc
